ARM: dts: Add pmu sysreg node to exynos5250 and exynos5420 dtsi files
This patch adds pmusysreg node to exynos5250 and exynos5420 dtsi files to
handle PMU register accesses in a centralized way using syscon driver

This is picked from patchwork at:
  https://patchwork.kernel.org/patch/3195771/

BUG=chrome-os-partner:24222
TEST=With series /dev/watchdog works and reports watchdog reboots

Change-Id: I79afe032ad42d6642f242942c2c97a46a01666f8
Signed-off-by: Leela Krishna Amudala <l.krishna@samsung.com>
Reviewed-by: Tomasz Figa <t.figa@samsung.com>
Signed-off-by: Doug Anderson <dianders@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/177931
Reviewed-by: Olof Johansson <olofj@chromium.org>

--- a/arch/arm/boot/dts/exynos5250.dtsi
+++ b/arch/arm/boot/dts/exynos5250.dtsi
@@ -159,6 +159,11 @@
 		interrupts = <0 47 0>;
 	};
 
+	pmu_syscon: syscon@10040000 {
+		compatible = "samsung,exynos5250-pmu", "syscon";
+		reg = <0x10040000 0x5000>;
+	};
+
 	watchdog {
 		compatible = "samsung,s3c2410-wdt";
 		reg = <0x101D0000 0x100>;
