ARM: dts: update watchdog device nodes for Exynos5250 and Exynos5420
In Exynos5 series SoCs, PMU has registers to enable/disable mask/unmask
watchdog timer which is not the case with s3c series SoCs so, there is a
need to have different compatible names for watchdog to handle these pmu
registers access.

Hence this patch removes watchdog node from Exynos5.dtsi common file and
make it separate by updating existing node in Exynos5250 and adding new node
to Exynos5420. This patch also makes the watchdog node enabled by default

This is picked from patchwork at:
  https://patchwork.kernel.org/patch/3247441/
[dianders: handled the fact that we don't have common "exynos5.dtsi" file]

BUG=chrome-os-partner:24222
TEST=With series /dev/watchdog works and reports watchdog reboots

Change-Id: I516101d67a8362b9f0699098ea283489a72b62b4
Signed-off-by: Leela Krishna Amudala <l.krishna@samsung.com>
Reviewed-by: Tomasz Figa <t.figa@samsung.com>
Signed-off-by: Doug Anderson <dianders@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/177933
Reviewed-by: Olof Johansson <olofj@chromium.org>

--- a/arch/arm/boot/dts/exynos5250.dtsi
+++ b/arch/arm/boot/dts/exynos5250.dtsi
@@ -164,12 +164,13 @@
 		reg = <0x10040000 0x5000>;
 	};
 
-	watchdog {
-		compatible = "samsung,s3c2410-wdt";
+	watchdog@101D0000 {
+		compatible = "samsung,exynos5250-wdt";
 		reg = <0x101D0000 0x100>;
 		interrupts = <0 42 0>;
 		clocks = <&clock 336>;
 		clock-names = "watchdog";
+		samsung,syscon-phandle = <&pmu_syscon>;
 	};
 
 	mfc: codec@11000000 {
