CHROMIUM: config: exynos: Enable display timing
This enables some helpers that allow us to parse the
display-timings binding in the device tree.

BUG=chromium:266008
TEST=Tested on peach pit and spring

Change-Id: Iac72963662f43005833ed0ce757f98b68cde7f56
Signed-off-by: Sean Paul <seanpaul@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/175188

--- a/chromeos/config/armel/chromiumos-arm.flavour.config
+++ b/chromeos/config/armel/chromiumos-arm.flavour.config
@@ -104,6 +104,8 @@ CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SDHCI_TEGRA=y
 # CONFIG_NEON is not set
 CONFIG_NR_CPUS=4
+# CONFIG_OF_DISPLAY_TIMING is not set
+# CONFIG_OF_VIDEOMODE is not set
 CONFIG_OUTER_CACHE=y
 CONFIG_OUTER_CACHE_SYNC=y
 CONFIG_PAGEFLAGS_EXTENDED=y
