--- a/chromeos/config/armel/chromiumos-tegra114.flavour.config
+++ b/chromeos/config/armel/chromiumos-tegra114.flavour.config
@@ -122,6 +122,8 @@ CONFIG_NEON=y
 CONFIG_NR_CPUS=4
 CONFIG_NVEC_PAZ00=y
 CONFIG_NVEC_POWER=y
+# CONFIG_OF_DISPLAY_TIMING is not set
+# CONFIG_OF_VIDEOMODE is not set
 CONFIG_OUTER_CACHE=y
 CONFIG_OUTER_CACHE_SYNC=y
 CONFIG_PAGEFLAGS_EXTENDED=y
