--- a/chromeos/config/armel/chromeos-exynos5.flavour.config
+++ b/chromeos/config/armel/chromeos-exynos5.flavour.config
@@ -81,6 +81,7 @@ CONFIG_DEBUG_USER=y
 # CONFIG_DEVFREQ_GOV_POWERSAVE is not set
 CONFIG_DEVFREQ_GOV_SIMPLE_ONDEMAND=y
 # CONFIG_DEVFREQ_GOV_USERSPACE is not set
+CONFIG_DISPLAY_TIMING=y
 CONFIG_DMADEVICES=y
 # CONFIG_DMADEVICES_DEBUG is not set
 # CONFIG_DMATEST is not set
@@ -207,6 +208,8 @@ CONFIG_NEON=y
 CONFIG_NO_IOPORT=y
 CONFIG_NR_CPUS=8
 # CONFIG_OC_ETM is not set
+CONFIG_OF_DISPLAY_TIMING=y
+CONFIG_OF_VIDEOMODE=y
 CONFIG_PAGE_OFFSET=0xC0000000
 CONFIG_PINCTRL_EXYNOS=y
 CONFIG_PINCTRL_SAMSUNG=y
@@ -324,6 +327,7 @@ CONFIG_V4L2_MEM2MEM_DEV=m
 CONFIG_V4L_MEM2MEM_DRIVERS=y
 # CONFIG_VFIO is not set
 CONFIG_VIDEOBUF2_DMA_CONTIG=m
+CONFIG_VIDEOMODE=y
 CONFIG_VIDEO_DEV=y
 CONFIG_VIDEO_FIXED_MINOR_RANGES=y
 # CONFIG_VIDEO_MEM2MEM_DEINTERLACE is not set
