--- a/arch/arm/boot/dts/exynos5250.dtsi
+++ b/arch/arm/boot/dts/exynos5250.dtsi
@@ -161,11 +161,10 @@
 
 	watchdog {
 		compatible = "samsung,s3c2410-wdt";
-		reg = <0x101D0000 0x100>, <0x10040408 0x4>, <0x1004040c 0x4>;
+		reg = <0x101D0000 0x100>;
 		interrupts = <0 42 0>;
 		clocks = <&clock 336>;
 		clock-names = "watchdog";
-		reset-mask-bit = <20>;
 	};
 
 	mfc: codec@11000000 {
