--- a/arch/arm/boot/dts/exynos5420.dtsi
+++ b/arch/arm/boot/dts/exynos5420.dtsi
@@ -233,12 +233,11 @@
 
 	watchdog {
 		compatible = "samsung,s3c2410-wdt";
-		reg = <0x101D0000 0x100>, <0x10040408 0x4>, <0x1004040c 0x4>;
+		reg = <0x101D0000 0x100>;
 		interrupts = <0 42 0>;
 		clocks = <&clock 316>;
 		clock-names = "watchdog";
 		status = "disabled";
-		reset-mask-bit = <0>;
 	};
 
 	rtc {
