ARM: dts: Avoid dts warning about address-cells / size-cells on PMIC
On 5250 we specify a subnode of the maxim PMIC that looks like:
  maxim_rtc: rtc {
    reg = <0x6>;
  };

...but we don't specify the number of bytes we should use for
addresses in the PMIC's children.  That gives us a warning like:

  Warning (reg_format): "reg" property in /i2c@12C60000/max77686@09/rtc has invalid length (4 bytes) (#address-cells == 2, #size-cells == 1)
  Warning (avoid_default_addr_size): Relying on default #address-cells value for /i2c@12C60000/max77686@09/rtc
  Warning (avoid_default_addr_size): Relying on default #size-cells value for /i2c@12C60000/max77686@09/rtc

...fix the warning by being explicit.

BUG=None
TEST=RTC still works on snow; no compile warnings

Change-Id: I96aadbb731ee7cf992e9dab3ce33204652a5e93b
Signed-off-by: Doug Anderson <dianders@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/177898
Reviewed-by: Andrew Bresticker <abrestic@chromium.org>

--- a/arch/arm/boot/dts/cros5250-common.dtsi
+++ b/arch/arm/boot/dts/cros5250-common.dtsi
@@ -148,6 +148,8 @@
 			pinctrl-0 = <&max77686_irq>;
 			wakeup-source;
 			reg = <0x09>;
+			#address-cells = <1>;
+			#size-cells = <0>;
 
 			voltage-regulators {
 				ldo1_reg: LDO1 {
