ARM: dts: Update watchdog timer to fire at 32 seconds
By default the watchdog timer fired in 15 seconds of no patting.  The
maximum supported by the hardware is 32 seconds and it seems
reasonable to use this so that other lockup detectors (that print more
debugging information) have a chance to run first.

BUG=chrome-os-partner:22157
TEST=Enable but don't pat the watchdog.  Reboot in 32 seconds.
TEST=Run daisydog manually and see it prints 32 seconds.

Change-Id: I891156c4ab9d860a8bfec1bda88d1e59875e3d60
Signed-off-by: Doug Anderson <dianders@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/178300

--- a/arch/arm/boot/dts/exynos5420-peach-pit.dtsi
+++ b/arch/arm/boot/dts/exynos5420-peach-pit.dtsi
@@ -1322,4 +1322,13 @@
 			powerdown-settings = <6 3 6 3 1 3 3>;
 		};
 	};
+
+	/*
+	 * Use longest HW watchdog in SoC (32 seconds) since the hardware
+	 * watchdog provides no debugging information (compared to soft/hard
+	 * lockup detectors) and so should be last resort.
+	 */
+	watchdog@101D0000 {
+		timeout-sec = <32>;
+	};
 };
