CHROMIUM: config: Activate support for common ASUS hardware [laptop, wifi]
This commit brings [back, maybe] kernel support for relatively common
hardware found in ASUS laptops, such as intel-based Wifi cards or
Ultrabook touchscreen support [EETI should be the driver for some
eGalax devices], as well as WMI interfaces for said brand's laptops
such as the committer's own.

This patch has an ugly side-effect of deactivating iwl7000; it seems
that iwldwm and iwlmvm [firmware loaders] are mutually exclusive.

BUG=None
TEST=build_packages, modules are built
Change-Id: I4919e394606e55ed5bb2a355cd487005f6080293
Signed-off-by: Renaud Lepage <root@cybikbase.com>
Reviewed-on: https://chromium-review.googlesource.com/178890
Reviewed-by: Vincent Palatin <vpalatin@chromium.org>
Reviewed-by: Paul Stewart <pstew@chromium.org>
Reviewed-by: Olof Johansson <olofj@chromium.org>
Tested-by: Olof Johansson <olofj@chromium.org>
Commit-Queue: Olof Johansson <olofj@chromium.org>

--- a/chromeos/config/armel/common.config
+++ b/chromeos/config/armel/common.config
@@ -185,6 +185,7 @@ CONFIG_HW_PERF_EVENTS=y
 # CONFIG_HW_RANDOM_ATMEL is not set
 # CONFIG_I2C_DESIGNWARE_PLATFORM is not set
 CONFIG_INPUT_MATRIXKMAP=y
+# CONFIG_INPUT_POLLDEV is not set
 # CONFIG_INPUT_SPARSEKMAP is not set
 # CONFIG_ISCSI_BOOT_SYSFS is not set
 # CONFIG_ISCSI_TCP is not set
@@ -340,6 +341,7 @@ CONFIG_SWP_EMULATE=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
 CONFIG_TCG_TIS_I2C_INFINEON=y
 # CONFIG_THUMB2_KERNEL is not set
+# CONFIG_TOUCHSCREEN_EETI is not set
 # CONFIG_TOUCHSCREEN_EGALAX is not set
 # CONFIG_TOUCHSCREEN_W90X900 is not set
 # CONFIG_UACCESS_WITH_MEMCPY is not set
