--- a/chromeos/config/i386/chromiumos-i386.flavour.config
+++ b/chromeos/config/i386/chromiumos-i386.flavour.config
@@ -9,6 +9,13 @@ CONFIG_8139TOO_PIO=y
 # CONFIG_8139_OLD_RX_RESET is not set
 CONFIG_ACERHDF=m
 CONFIG_ACPI_WMI=y
+CONFIG_ASUS_LAPTOP=m
+CONFIG_ASUS_NB_WMI=m
+CONFIG_ASUS_WMI=m
+CONFIG_ATL1=m
+CONFIG_ATL1C=m
+CONFIG_ATL1E=m
+CONFIG_ATL2=m
 # CONFIG_BRCMDBG is not set
 CONFIG_BRCMFMAC=m
 CONFIG_BRCMFMAC_SDIO=y
@@ -28,12 +35,14 @@ CONFIG_DRM_NOUVEAU_BACKLIGHT=y
 CONFIG_DRM_RADEON=y
 CONFIG_DRM_RADEON_KMS=y
 CONFIG_DRM_TTM=y
+CONFIG_EEEPC_WMI=m
 CONFIG_EXTRA_FIRMWARE="radeon/PALM_me.bin radeon/PALM_pfp.bin radeon/SUMO_rlc.bin"
 CONFIG_EXTRA_FIRMWARE_DIR="firmware"
 CONFIG_FB_BACKLIGHT=y
 CONFIG_FB_SYS_COPYAREA=y
 CONFIG_FB_SYS_FILLRECT=y
 CONFIG_FB_SYS_IMAGEBLIT=y
+CONFIG_INPUT_POLLDEV=m
 # CONFIG_INTEL_IOMMU is not set
 CONFIG_IPW2100=m
 # CONFIG_IPW2100_DEBUG is not set
@@ -71,6 +80,7 @@ CONFIG_MWIFIEX_PCIE=m
 # CONFIG_MWIFIEX_SDIO is not set
 # CONFIG_MWIFIEX_USB is not set
 CONFIG_MXM_WMI=y
+CONFIG_NET_VENDOR_ATHEROS=y
 # CONFIG_NF_CONNTRACK_PROCFS is not set
 CONFIG_NOUVEAU_DEBUG=5
 CONFIG_NOUVEAU_DEBUG_DEFAULT=3
@@ -87,6 +97,7 @@ CONFIG_RTLLIB_CRYPTO_CCMP=m
 CONFIG_RTLLIB_CRYPTO_TKIP=m
 CONFIG_RTLLIB_CRYPTO_WEP=m
 # CONFIG_RTLWIFI_DEBUG is not set
+CONFIG_TOUCHSCREEN_EETI=m
 CONFIG_X86_POWERNOW_K6=y
 CONFIG_X86_POWERNOW_K7=y
 CONFIG_X86_POWERNOW_K7_ACPI=y
