--- a/chromeos/config/i386/chromeos-pinetrail-i386.flavour.config
+++ b/chromeos/config/i386/chromeos-pinetrail-i386.flavour.config
@@ -5,6 +5,8 @@
 # CONFIG_8139TOO is not set
 # CONFIG_ACERHDF is not set
 CONFIG_ACPI_WMI=m
+# CONFIG_ASUS_LAPTOP is not set
+# CONFIG_ASUS_WMI is not set
 # CONFIG_BRCMFMAC is not set
 # CONFIG_BROADCOM_PHY is not set
 # CONFIG_CORDIC is not set
@@ -21,6 +23,7 @@ CONFIG_FB_SYS_COPYAREA=m
 CONFIG_FB_SYS_FILLRECT=m
 CONFIG_FB_SYS_IMAGEBLIT=m
 CONFIG_HAVE_INTEL_TXT=y
+# CONFIG_INPUT_POLLDEV is not set
 CONFIG_INTEL_IOMMU=y
 CONFIG_INTEL_IOMMU_DEFAULT_ON=y
 CONFIG_INTEL_IOMMU_FLOPPY_WA=y
@@ -38,6 +41,7 @@ CONFIG_IOMMU_API=y
 # CONFIG_MWIFIEX is not set
 # CONFIG_MXM_WMI is not set
 CONFIG_NEED_DMA_MAP_STATE=y
+# CONFIG_NET_VENDOR_ATHEROS is not set
 CONFIG_NF_CONNTRACK_PROCFS=y
 CONFIG_NF_CONNTRACK_PROC_COMPAT=y
 # CONFIG_RT2500USB is not set
@@ -48,6 +52,7 @@ CONFIG_NF_CONNTRACK_PROC_COMPAT=y
 # CONFIG_RTL8192SE is not set
 # CONFIG_RTLLIB is not set
 CONFIG_RTLWIFI_DEBUG=y
+# CONFIG_TOUCHSCREEN_EETI is not set
 # CONFIG_VFIO is not set
 # CONFIG_X86_POWERNOW_K6 is not set
 # CONFIG_X86_POWERNOW_K7 is not set
