--- a/arch/arm/boot/dts/exynos5420-peach-pit-rev3_5.dts
+++ b/arch/arm/boot/dts/exynos5420-peach-pit-rev3_5.dts
@@ -1,5 +1,5 @@
 /*
- * Google Peach Pit Rev 3 board device tree source
+ * Google Peach Pit Rev 3/5 board device tree source
  *
  * Copyright (c) 2013 Google, Inc
  *
@@ -10,12 +10,12 @@
 
 /dts-v1/;
 #include "exynos5420.dtsi"
-#include "exynos5420-peach-pit.dtsi"
+#include "exynos5420-peach.dtsi"
 
 / {
-	model = "Google Peach Pit Rev 3";
+	model = "Google Peach Pit Rev 3/5";
 
-	compatible = "google,pit-rev3", "google,pit",
+	compatible = "google,pit-rev5", "google,pit-rev3", "google,pit",
 		"google,peach", "samsung,exynos5420";
 
 	/* Override HDMI-en-supply back to FET2 */
