ARM: dts: Keep LDO2 always-on on peach-pi rev8/rev9
peach-pi rev8/rev9 has PoP samples which contains memory in the same
package.  LDO2 is supplying internal memory I/O voltage, that
regulator needs to be in always-on state.

BUG=chrome-os-partner:24554
TEST=build and booted on pi, see no more hangs, w/o this system used
     to hang at random points

Change-Id: Ib0ed55bbb77431e67774822c975790a9ae1daf43
Signed-off-by: Alim Akhtar <alim.akhtar@samsung.com>
Signed-off-by: Doug Anderson <dianders@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/179943

--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -49,6 +49,7 @@ dtb-$(CONFIG_ARCH_EXYNOS) += exynos4210-origen.dtb \
 	exynos5250-spring.dtb \
 	exynos5420-peach-kirby.dtb \
 	exynos5420-peach-pi.dtb \
+	exynos5420-peach-pi-rev8_9.dtb \
 	exynos5420-peach-pit-rev3_5.dtb \
 	exynos5420-peach-pit-rev4.dtb \
 	exynos5420-peach-pit.dtb \
