ARM: dts: Keep FET1 and FET6 always on for peach-pi
On peach-pi, we don't support eDP bridge chip driver which can
control FET1 and FET6 needed for backlight and LCD power.
We just enable once and leave it on forever.

BUG=chrome-os-partner:24554
TEST=Boot peach-pi, see chromium login screen.

Change-Id: Id3faf57bab1ae424613359f6ab1917170ce89b8b
Signed-off-by: Ajay Kumar <ajaykumar.rs@samsung.com>
Signed-off-by: Doug Anderson <dianders@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/179945
Reviewed-by: Derek Basehore <dbasehore@chromium.org>

--- a/arch/arm/boot/dts/exynos5420-peach-pi.dtsi
+++ b/arch/arm/boot/dts/exynos5420-peach-pi.dtsi
@@ -36,4 +36,21 @@
 		enable-gpio = <&gpx2 2 0>;
 		pinctrl-0 = <&backlight_pwm &backlight_en>;
 	};
+
+	spi@12d40000 {
+		cros-ec@0 {
+			i2c-tunnel {
+				power-regulator@48 {
+						regulators {
+							fet1 {
+								regulator-always-on;
+							};
+							fet6 {
+								regulator-always-on;
+							};
+						};
+					};
+				};
+			};
+		};
 };
