CHROMIUM: Enable iTCO watchdog timer in kernel configs
This enables CONFIG_ITCO_WDT and CONFIG_ITCO_VENDOR_SUPPORT for
i386 and x86_64.

BUG=chromium:321832
TEST=verified that the Intel TCO watchdog works on peppy

Change-Id: I05fa814e7f69b83c9b3a5edafee30d350742075e
Signed-off-by: Ben Zhang <benzh@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/180325
Reviewed-by: Aaron Durbin <adurbin@chromium.org>

--- a/chromeos/config/x86_64/common.config
+++ b/chromeos/config/x86_64/common.config
@@ -493,7 +493,8 @@ CONFIG_ISA_DMA_API=y
 # CONFIG_ISCSI_IBFT_FIND is not set
 # CONFIG_IT8712F_WDT is not set
 # CONFIG_IT87_WDT is not set
-# CONFIG_ITCO_WDT is not set
+CONFIG_ITCO_VENDOR_SUPPORT=y
+CONFIG_ITCO_WDT=y
 # CONFIG_IXGB is not set
 # CONFIG_IXGBE is not set
 # CONFIG_IXGBEVF is not set
@@ -511,7 +512,7 @@ CONFIG_LEDS_CHROMEOS_KEYBOARD=y
 # CONFIG_LEDS_INTEL_SS4200 is not set
 # CONFIG_LIBERTAS is not set
 CONFIG_LIBERTAS_THINFIRM_USB=m
-# CONFIG_LPC_ICH is not set
+CONFIG_LPC_ICH=y
 CONFIG_LPC_SCH=y
 CONFIG_LZO_COMPRESS=m
 CONFIG_LZO_DECOMPRESS=m
