--- a/arch/arm/mach-exynos/Kconfig
+++ b/arch/arm/mach-exynos/Kconfig
@@ -67,6 +67,7 @@ config SOC_EXYNOS5250
 	select ARM_CPU_SUSPEND if (PM || CPU_IDLE)
 	select S5P_PM if PM
 	select ARM_ERRATA_766421
+	select ARM_ERRATA_773769
 	select S5P_SLEEP if (PM || CPU_IDLE)
 
 	help
