ARM: dts: Add DT properties for FIMD and DP on peach-pi
Added FIMD and DP DT properties needed for peach-pi.

Since peach-pi doesn't contain bridge chip and it has a different LCD,
few display related DT properties are different for peach-pi from peach.dtsi.
So, we have to move out few uncommon DT properties from peach.dtsi and
distribute them across appropriate board dts.

The following DT entries were moved out and distributed:
-- parade-8625(eDP-LVDS bridge) present on i2c7
-- FIMD pixel clock rate and timing values
-- DP lane count
-- pinctrl property for DP

We've also added a backlight enable pin for pi since the backlight is
now controlled on the AP.

BUG=chrome-os-partner:24554
TEST=Boot peach-pit and peach-pi, see chromium login screen.
Also check refresh rate~=60, using modetest

Change-Id: I15c30f8646dd5154fdebf19957f184ca3b055010
Signed-off-by: Ajay Kumar <ajaykumar.rs@samsung.com>
Signed-off-by: Doug Anderson <dianders@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/179944
Reviewed-by: Wonjoon Lee <woojoo.lee@samsung.com>

--- a/arch/arm/boot/dts/exynos5420-peach-pi-rev8_9.dts
+++ b/arch/arm/boot/dts/exynos5420-peach-pi-rev8_9.dts
@@ -11,6 +11,7 @@
 /dts-v1/;
 #include "exynos5420.dtsi"
 #include "exynos5420-peach.dtsi"
+#include "exynos5420-peach-pi.dtsi"
 
 / {
 	model = "Google Peach Pi Rev 8/9";
