ARM: dts: exynos5250/542X: add dt node for sss module
This patch adds the device tree node for SSS module
found on Exynos5420/5422 and Exynos5250

BUG=chrome-os-partner:23189, chrome-os-partner:25419
TEST=build for peach_pit. Check SSS driver being probed
and chrome os mounts, we should be able to login with a user
and use /home/chronos/user/Downloads

Change-Id: Ie30add94a34b535825fdd31b10c15e3b17f8e167
Signed-off-by: Naveen Krishna Chatradhi <ch.naveen@samsung.com>
Reviewed-by: Tomasz Figa <t.figa@samsung.com>
TO: <linux-samsung-soc@vger.kernel.org>
CC: Kukjin Kim <kgene.kim@samsung.com>
CC: <linux-crypto@vger.kernel.org>
Reviewed-on: https://chromium-review.googlesource.com/183685
Tested-by: naveen krishna <naveen@chromium.org>
Reviewed-by: Sonny Rao <sonnyrao@chromium.org>
Commit-Queue: Sonny Rao <sonnyrao@chromium.org>

--- a/arch/arm/boot/dts/exynos5250.dtsi
+++ b/arch/arm/boot/dts/exynos5250.dtsi
@@ -989,4 +989,12 @@
 		clocks = <&clock 345>, <&clock 515>, <&clock 6>, <&clock 1>, <&clock 5>;
 		clock-names = "g3d", "aclk_g3d", "mout_gpll", "ext_xtal", "fout_gpll";
 	};
+
+	sss@10830000 {
+		compatible = "samsung,exynos4210-secss";
+		reg = <0x10830000 0x10000>;
+		interrupts = <0 112 0>;
+		clocks = <&clock 348>;
+		clock-names = "secss";
+	};
 };
