arm: dts: exynos542x: Refactor exynos5420 dts files
We are going to add a new variant of exynos5420 series which is almost
similar to exsisting exynos5420 SoC. This is ground work to add support
for new SoC.
In this patch we are just renaming file which will be used as common
file.

BUG=chrome-os-partner:24687
TEST=build and booted on pit, and everything works fine
Signed-off-by: Alim Akhtar <alim.akhtar@samsung.com>

Change-Id: I65c848e3219dac5d697a7d0003e92f020abeffe4
Reviewed-on: https://chromium-review.googlesource.com/181327
Reviewed-by: Doug Anderson <dianders@chromium.org>
Tested-by: Alim Akhtar <alim.akhtar@samsung.com>
Commit-Queue: Doug Anderson <dianders@chromium.org>

--- a/arch/arm/boot/dts/exynos5420-peach-pi-rev8_9.dts
+++ b/arch/arm/boot/dts/exynos5420-peach-pi-rev8_9.dts
@@ -10,8 +10,8 @@
 
 /dts-v1/;
 #include "exynos5420.dtsi"
-#include "exynos5420-peach.dtsi"
-#include "exynos5420-peach-pi.dtsi"
+#include "exynos542x-peach.dtsi"
+#include "exynos542x-peach-pi.dtsi"
 
 / {
 	model = "Google Peach Pi Rev 8/9";
