--- a/arch/arm/boot/dts/exynos5422-peach-pi.dts
+++ b/arch/arm/boot/dts/exynos5422-peach-pi.dts
@@ -9,13 +9,13 @@
  */
 
 /dts-v1/;
-#include "exynos5420.dtsi"
-#include "exynos5420-peach.dtsi"
-#include "exynos5420-peach-pi.dtsi"
+#include "exynos5422.dtsi"
+#include "exynos542x-peach.dtsi"
+#include "exynos542x-peach-pi.dtsi"
 
 / {
 	model = "Google Peach Pi Rev 10+";
 
 	compatible = "google,pi-rev12", "google,pi-rev11", "google,pi-rev10",
-		"google,pi", "google,peach", "samsung,exynos5420";
+		"google,pi", "google,peach", "samsung,exynos5422";
 };
