--- a/arch/arm/boot/dts/exynos542x-pinctrl.dtsi
+++ b/arch/arm/boot/dts/exynos542x-pinctrl.dtsi
@@ -1,10 +1,12 @@
 /*
- * Samsung's Exynos5420 SoC pin-mux and pin-config device tree source
+ * Samsung's Exynos5420 and Exynos5422 SoCs pin-mux and pin-config device
+ * tree source
  *
  * Copyright (c) 2013 Samsung Electronics Co., Ltd.
  *		http://www.samsung.com
  *
- * Samsung's Exynos5420 SoC pin-mux and pin-config options are listed as device
+ * Samsung's Exynos5420 and Exynos5422 SoCs pin-mux and pin-config options
+ * are listed as device
  * tree nodes are listed in this file.
  *
  * This program is free software; you can redistribute it and/or modify
