crypto:s5p-sss: Kconfig: Let Exynos SoCs select SSS driver
This patch modifies Kconfig such that ARCH_EXYNOS SoCs
which includes (Exynos4210, Exynos5250 and Exynos5420)
can also select Samsung SSS(Security SubSystem) driver.

BUG=chrome-os-partner:23189, chrome-os-partner:25419
TEST=build for peach_pit.
Should be able to select the Samsung SSS driver for Exynos flavour
With other patches in the series the SSS driver is being probed and
registered successfully on Peach board.

This patch set was reviewed at
http://lkml.org/lkml/2014/2/25/23

Change-Id: I1dc7dbe3262711c14a9c96aa1b193ad83bdf568b
Signed-off-by: Naveen Krishna Ch <ch.naveen@samsung.com>
Reviewed-by: Tomasz Figa <t.figa@samsung.com>
Acked-by: Herbert Xu <herbert@gondor.apana.org.au>
CC: David S. Miller <davem@davemloft.net>
CC: Vladimir Zapolskiy <vzapolskiy@gmail.com>
TO: <linux-crypto@vger.kernel.org>
CC: <linux-samsung-soc@vger.kernel.org>
Reviewed-on: https://chromium-review.googlesource.com/183681
Reviewed-by: naveen krishna <naveen@chromium.org>
Tested-by: naveen krishna <naveen@chromium.org>
Reviewed-by: Sonny Rao <sonnyrao@chromium.org>
Commit-Queue: Sonny Rao <sonnyrao@chromium.org>

--- a/drivers/crypto/Kconfig
+++ b/drivers/crypto/Kconfig
@@ -277,14 +277,14 @@ config CRYPTO_DEV_PICOXCELL
 	  Saying m here will build a module named pipcoxcell_crypto.
 
 config CRYPTO_DEV_S5P
-	tristate "Support for Samsung S5PV210 crypto accelerator"
-	depends on ARCH_S5PV210
+	tristate "Support for Samsung S5PV210/Exynos crypto accelerator"
+	depends on ARCH_S5PV210 || ARCH_EXYNOS
 	select CRYPTO_AES
 	select CRYPTO_ALGAPI
 	select CRYPTO_BLKCIPHER
 	help
 	  This option allows you to have support for S5P crypto acceleration.
-	  Select this to offload Samsung S5PV210 or S5PC110 from AES
+	  Select this to offload Samsung S5PV210 or S5PC110, Exynos from AES
 	  algorithms execution.
 
 config CRYPTO_DEV_TEGRA_AES
