MALI: EXYNOS: Update device tree bindings
Updates the device tree bindings for Midgard architecture Mali GPUs.
Refines the compatible string to the Midgard architecture, and adds
interrupt-names to correspond with the interrupt property.

This change aligns with later releases of the Mali DDK.

BUG=chrome-os-partner:25563
TEST=emerge-daisy chromeos-kernel-next; Ensure UI starts correctly to
     ensure kbase driver has initialized correctly.

Change-Id: Ia1b8caf474fffcbb533fb9ad5bd700f5638f5be6
Signed-off-by: David Garbett <david.garbett@arm.com>
Reviewed-on: https://chromium-review.googlesource.com/185010
Reviewed-by: Olof Johansson <olofj@chromium.org>
Reviewed-by: Daniel Kurtz <djkurtz@chromium.org>
Commit-Queue: Daniel Kurtz <djkurtz@chromium.org>
Tested-by: Daniel Kurtz <djkurtz@chromium.org>

--- a/arch/arm/boot/dts/exynos5250.dtsi
+++ b/arch/arm/boot/dts/exynos5250.dtsi
@@ -982,9 +982,10 @@
 	};
 
 	mali {
-		compatible = "arm,mali";
+		compatible = "arm,mali-midgard";
 		reg = <0x11800000 0x5000>;
 		interrupts = <0 118 0>, <0 119 0>, <0 117 0>;
+		interrupt-names = "JOB", "MMU", "GPU";
 		clocks = <&clock 345>, <&clock 515>, <&clock 6>, <&clock 1>, <&clock 5>;
 		clock-names = "g3d", "aclk_g3d", "mout_gpll", "ext_xtal", "fout_gpll";
 	};
