--- a/arch/arm/boot/dts/exynos542x.dtsi
+++ b/arch/arm/boot/dts/exynos542x.dtsi
@@ -943,9 +943,10 @@
 	};
 
 	mali {
-		compatible = "arm,mali";
+		compatible = "arm,mali-midgard";
 		reg = <0x11800000 0x5000>;
 		interrupts = <0 219 0>, <0 74 0>, <0 117 0>;
+		interrupt-names = "JOB", "MMU", "GPU";
 		clocks = <&clock 500>, <&clock 1036>, <&clock 6>, <&clock 1>,
 			<&clock 7>;
 		clock-names = "g3d", "aclk_g3d", "mout_vpll", "ext_xtal",
