arm: dts: exynos5422: add power domain node for CAM block
Exynos5422 has a new power domain for the CAM block. Add a
node to device tree so that it gets power gated by default.

BUG=chrome-os-partner:24687
TEST=Build and boot on exynos5422. Check that CAM blk is power gated
     after bootup.
     /wo this patch
    localhost ~ # armio 0x10045100
    10045100:00000007
    /w this patch
    localhost ~ # armio 0x10045100
    10045100:00000000

Change-Id: I869b9413e93953ee9303e25ef960d54e68c48ce2
Signed-off-by: Prathyush K <prathyush.k@samsung.com>
Signed-off-by: Alim Akhtar <alim.akhtar@samsung.com>
[Alim: modified the commit message]
Reviewed-on: https://chromium-review.googlesource.com/182019
Reviewed-by: Doug Anderson <dianders@chromium.org>
Commit-Queue: Doug Anderson <dianders@chromium.org>

--- a/arch/arm/boot/dts/exynos5422.dtsi
+++ b/arch/arm/boot/dts/exynos5422.dtsi
@@ -17,4 +17,9 @@
 	clock: clock-controller@0x10010000 {
 		compatible = "samsung,exynos5422-clock";
 	};
+
+	cam_pd: pd@10045100 {
+		compatible = "samsung,exynos4210-pd";
+		reg = <0x10045100 0x20>;
+	};
 };
