arm: dts: exynos542x: add mfc device tree node
MFC is changes between 5420 and 5422, 5420 is using MFCv7.2
and 5422 uses MFCv8.0, this patch refactor mfc node to be
used by 5422 and 5420 SoCs.

BUG=chrome-os-partner:24687
TEST=build and booted on pit and pi, /w other CLs can play video

Change-Id: Ie46521ea235d772011158ca55a37da01d3bd2e5a
Signed-off-by: Alim Akhtar <alim.akhtar@samsung.com>
Reviewed-on: https://chromium-review.googlesource.com/182123
Reviewed-by: Pawel Osciak <posciak@chromium.org>

--- a/arch/arm/boot/dts/exynos5420.dtsi
+++ b/arch/arm/boot/dts/exynos5420.dtsi
@@ -17,4 +17,8 @@
 	clock: clock-controller@0x10010000 {
 		compatible = "samsung,exynos5420-clock";
 	};
+
+	mfc: codec@11000000 {
+		compatible = "samsung,mfc-v7";
+	};
 };
