ARM: dts: Promote cros-ec-keyboard to its own fragment
We include the same keyboard definition across many dts files.  Let's
move it to a fragment to avoid duplication.

This CL does make a few functional changes:
* Adds international "\" to kirby DTS
* Changes the name of the keyboard node on venice2 (I don't think this
  matters)
* Adds the special "BATTERY" key everywhere.  It shouldn't hurt to
  define this even on hardware where the EC is never sending it.

BUG=None
TEST=Build and boot; can still use keyboard.

Change-Id: Ib8a634f56097c01387aaf16f59e731389083dc0a
Signed-off-by: Doug Anderson <dianders@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/182665
Reviewed-by: Rhyland Klein <rklein@nvidia.com>
Tested-by: Rhyland Klein <rklein@nvidia.com>
Reviewed-by: Olof Johansson <olofj@chromium.org>

--- a/arch/arm/boot/dts/exynos5250-snow-rev5.dts
+++ b/arch/arm/boot/dts/exynos5250-snow-rev5.dts
@@ -12,6 +12,7 @@
 #include "exynos5250.dtsi"
 #include "cros5250-common.dtsi"
 #include "exynos5250-snow.dtsi"
+#include "cros-ec-keyboard.dtsi"
 
 / {
 	model = "Google Snow Rev 5+";
