--- a/arch/arm/boot/dts/exynos5250-snow-rev4.dts
+++ b/arch/arm/boot/dts/exynos5250-snow-rev4.dts
@@ -12,6 +12,7 @@
 #include "exynos5250.dtsi"
 #include "cros5250-common.dtsi"
 #include "exynos5250-snow.dtsi"
+#include "cros-ec-keyboard.dtsi"
 
 / {
 	/* NOTE: Don't change this to include rev; old mosys relies on it */
