--- a/arch/arm/boot/dts/exynos5420-peach-pi-rev8_9.dts
+++ b/arch/arm/boot/dts/exynos5420-peach-pi-rev8_9.dts
@@ -12,6 +12,7 @@
 #include "exynos5420.dtsi"
 #include "exynos542x-peach.dtsi"
 #include "exynos542x-peach-pi.dtsi"
+#include "cros-ec-keyboard.dtsi"
 
 / {
 	model = "Google Peach Pi Rev 8/9";
