--- a/arch/arm/boot/dts/exynos5420-peach-pit.dts
+++ b/arch/arm/boot/dts/exynos5420-peach-pit.dts
@@ -12,6 +12,7 @@
 #include "exynos5420.dtsi"
 #include "exynos542x-peach.dtsi"
 #include "exynos5420-peach-pit.dtsi"
+#include "cros-ec-keyboard.dtsi"
 
 / {
 	model = "Google Peach Pit Rev 6+";
