--- a/arch/arm/boot/dts/exynos5422-peach-pi.dts
+++ b/arch/arm/boot/dts/exynos5422-peach-pi.dts
@@ -12,6 +12,7 @@
 #include "exynos5422.dtsi"
 #include "exynos542x-peach.dtsi"
 #include "exynos542x-peach-pi.dtsi"
+#include "cros-ec-keyboard.dtsi"
 
 / {
 	model = "Google Peach Pi Rev 10+";
