--- a/arch/arm/boot/dts/exynos5420-peach-pit.dtsi
+++ b/arch/arm/boot/dts/exynos5420-peach-pit.dtsi
@@ -68,4 +68,12 @@
 	display-port-controller {
 		samsung,link-rate = <0x06>;
 	};
+
+	usb3_phy0: usbphy@12100000 {
+		samsung,txpreempamptune = <0x1>;
+	};
+
+	usb3_phy1: usbphy@12500000 {
+		samsung,txpreempamptune = <0x1>;
+	};
 };
