--- a/arch/arm/boot/dts/exynos542x-peach-pi.dtsi
+++ b/arch/arm/boot/dts/exynos542x-peach-pi.dtsi
@@ -37,6 +37,14 @@
 		pinctrl-0 = <&backlight_pwm &backlight_en>;
 	};
 
+	usb3_phy0: usbphy@12100000 {
+		samsung,txpreempamptune = <0x1>;
+	};
+
+	usb3_phy1: usbphy@12500000 {
+		samsung,txpreempamptune = <0x2>;
+	};
+
 	spi@12d40000 {
 		cros-ec@0 {
 			i2c-tunnel {
