--- a/chromeos/config/base.config
+++ b/chromeos/config/base.config
@@ -1900,6 +1900,7 @@ CONFIG_USB_PEGASUS=m
 # CONFIG_USB_RCAR_PHY is not set
 # CONFIG_USB_RIO500 is not set
 CONFIG_USB_RTL8150=m
+CONFIG_USB_RTL8152=m
 # CONFIG_USB_S2255 is not set
 CONFIG_USB_SERIAL=y
 # CONFIG_USB_SERIAL_AIRCABLE is not set
