ARM: dts: Don't name both 1.2V regulators the same
This avoids a warning at boot time:
  vdd_1v2: Failed to create debugfs directory

BUG=chrome-os-partner:25187
TEST=Boot up, no warning.

Change-Id: Id52861ee8e14ea079005bbedb873386a90782616
Signed-off-by: Doug Anderson <dianders@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/183397
Reviewed-by: Andrew Bresticker <abrestic@chromium.org>

--- a/arch/arm/boot/dts/exynos542x-peach.dtsi
+++ b/arch/arm/boot/dts/exynos542x-peach.dtsi
@@ -683,7 +683,7 @@
 					regulator-op-mode = <2>;
 				};
 				ldo2_reg: LDO2 {
-					regulator-name = "vdd_1v2";
+					regulator-name = "vdd_1v2_2";
 					regulator-min-microvolt = <1200000>;
 					regulator-max-microvolt = <1200000>;
 				};
