ARM: dts: Represent each audio device name for peach
The max98091 is the same as the 98090 but with an extra microphone.
this change represent every device audio device name of own board

BUG=chrome-os-partner:24838
TEST=With all changes pit and pi work for:
- youtube (speakers and headphones)
- aplay (speakers and headphones)
- google voice search w/ builtin mic

Change-Id: Ic8e2678a08a6cde08f6d75b5373c363e5f15bebd
Signed-off-by: Wonjoon Lee <woojoo.lee@samsung.com>
Reviewed-on: https://chromium-review.googlesource.com/183924
Reviewed-by: Doug Anderson <dianders@chromium.org>
Commit-Queue: Doug Anderson <dianders@chromium.org>

--- a/arch/arm/boot/dts/exynos5420-peach-pit.dtsi
+++ b/arch/arm/boot/dts/exynos5420-peach-pit.dtsi
@@ -53,6 +53,10 @@
 			pinctrl-0 = <&ps8625_sleep &ps8625_reset>;
 			display-timings = <&lcd_display_timings>;
 		};
+
+		max98090: codec@10 {
+			compatible = "maxim,max98090";
+		};
 	};
 
 	fimd {
@@ -75,5 +79,9 @@
 
 	usb3_phy1: usbphy@12500000 {
 		samsung,txpreempamptune = <0x1>;
+	};
+
+	sound {
+		compatible = "google,daisy-audio-max98090";
 	};
 };
