--- a/arch/arm/boot/dts/exynos542x-peach.dtsi
+++ b/arch/arm/boot/dts/exynos542x-peach.dtsi
@@ -886,7 +886,7 @@
 		clock-frequency = <400000>;
 
 		max98090: codec@10 {
-			compatible = "maxim,max98090";
+			/* compatible string defined in variant-boards */
 			reg = <0x10>;
 			interrupts = <2 0>;
 			interrupt-parent = <&gpx0>;
@@ -949,7 +949,7 @@
 	};
 
 	sound {
-		compatible = "google,daisy-audio-max98090";
+		/* compatible string defined in variant-boards */
 		samsung,i2s-controller = <&i2s_0>;
 		samsung,audio-codec = <&max98090>;
 		samsung,mic-det-gpios = <&gpx1 7 1>;
