--- a/arch/arm/boot/dts/exynos542x-peach.dtsi
+++ b/arch/arm/boot/dts/exynos542x-peach.dtsi
@@ -160,16 +160,16 @@
 	pinctrl@13410000 {
 		/* Adjust WiFi drive strengths lower for EMI */
 		sd1_clk: sd1-clk {
-			samsung,pin-drv = <0>;
+			samsung,pin-drv = <2>;
 		};
 		sd1_cmd: sd1-cmd {
-			samsung,pin-drv = <0>;
+			samsung,pin-drv = <2>;
 		};
 		sd1_bus4: sd1-bus-width4 {
-			samsung,pin-drv = <0>;
+			samsung,pin-drv = <2>;
 		};
 		sd1_bus8: sd1-bus-width8 {
-			samsung,pin-drv = <0>;
+			samsung,pin-drv = <2>;
 		};
 	};
 
@@ -328,6 +328,7 @@
 		num-slots = <1>;
 		supports-highspeed;
 		supports-sdr50-mode;
+		supports-sdr104-mode;
 		keep-power-in-suspend;
 		/* non-removable NOT set so mwifiex driver can use reset trick */
 		edge-triggered-interrupts;
@@ -335,7 +336,7 @@
 		bypass-smu;
 		fifo-depth = <0x40>;
 		card-detect-delay = <200>;
-		clock-frequency = <400000000>;
+		clock-frequency = <800000000>;
 		samsung,dw-mshc-ciu-div = <3>;
 		samsung,dw-mshc-sdr-timing = <4 4>;
 		samsung,dw-mshc-ddr-timing = <0 2>;
