CONFIG: MALI: Update for wk04_2014 options
As part of the wk04_2014 release of the Mali kbase driver,
the directory structure and configuration options were
renamed from t6xx to midgard.

This commit updates the config files to reflect this change.

Signed-off-by: David Garbett <david.garbett@arm.com>

BUG=chrome-os-partner:28099
TEST=emerge chromeos-kernel-next; Check mali is built. Ensure
     mali driver is loaded on startup, and the expected options
     (DVFS, sysfs) are enabled.

Change-Id: I665c65bbdb0a4bbd297117b43d3042b006151958
Reviewed-on: https://chromium-review.googlesource.com/185012
Reviewed-by: Daniel Kurtz <djkurtz@chromium.org>
Tested-by: Daniel Kurtz <djkurtz@chromium.org>

--- a/chromeos/config/i386/common.config
+++ b/chromeos/config/i386/common.config
@@ -501,7 +501,7 @@ CONFIG_LZO_DECOMPRESS=m
 CONFIG_M686=y
 # CONFIG_MACHZ_WDT is not set
 # CONFIG_MACINTOSH_DRIVERS is not set
-# CONFIG_MALI_T6XX is not set
+# CONFIG_MALI_MIDGARD is not set
 # CONFIG_MATH_EMULATION is not set
 # CONFIG_MATOM is not set
 # CONFIG_MCORE2 is not set
