--- a/chromeos/config/armel/chromiumos-arm.flavour.config
+++ b/chromeos/config/armel/chromiumos-arm.flavour.config
@@ -85,7 +85,7 @@ CONFIG_IIO=m
 CONFIG_KEYBOARD_TEGRA=y
 # CONFIG_LCD_CLASS_DEVICE is not set
 # CONFIG_LIBERTAS_THINFIRM_USB is not set
-# CONFIG_MALI_T6XX is not set
+# CONFIG_MALI_MIDGARD is not set
 # CONFIG_MCPM is not set
 # CONFIG_MEDIA_CONTROLLER is not set
 CONFIG_MEDIA_SUPPORT=m
