--- a/chromeos/config/x86_64/common.config
+++ b/chromeos/config/x86_64/common.config
@@ -517,7 +517,7 @@ CONFIG_LZO_COMPRESS=m
 CONFIG_LZO_DECOMPRESS=m
 # CONFIG_MACHZ_WDT is not set
 # CONFIG_MACINTOSH_DRIVERS is not set
-# CONFIG_MALI_T6XX is not set
+# CONFIG_MALI_MIDGARD is not set
 # CONFIG_MATOM is not set
 # CONFIG_MAXSMP is not set
 # CONFIG_MCORE2 is not set
