CHROMIUM: config: enable building brcmfmac wlan driver
BUG=chrome-os-partner:27006
TEST=autotest (wifi tests)

Change-Id: Ia4fcebc1e0bb9c91d9c4d9bee4d0c069bbd49cef
Signed-off-by: Arend van Spriel <arend@broadcom.com>
Signed-off-by: Daniel Kim <dekim@broadcom.com>
Reviewed-on: https://chromium-review.googlesource.com/190553
Reviewed-by: Paul Stewart <pstew@chromium.org>
Reviewed-by: Olof Johansson <olofj@chromium.org>

--- a/chromeos/config/armel/common.config
+++ b/chromeos/config/armel/common.config
@@ -362,3 +362,10 @@ CONFIG_ZBOOT_ROM_BSS=0x0
 CONFIG_ZBOOT_ROM_TEXT=0x0
 # CONFIG_ZD1211RW is not set
 CONFIG_ZONE_DMA_FLAG=0
+#
+# brcmfmac wireless driver
+#
+CONFIG_BRCMFMAC=m
+CONFIG_BRCMFMAC_SDIO=y
+CONFIG_BRCM_TRACING=y
+CONFIG_BRCMDBG=y
