ARM: dts: Add more revs for pit/pi
Make sure that we don't fail to boot if/when we build newer revisions
of pit and pi.

BUG=chrome-os-partner:25399
TEST=Existing pits and pis still boot.

Change-Id: I5281675d32ceb0f665f41369e70eb354ef5c1b70
Signed-off-by: Doug Anderson <dianders@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/184258
Reviewed-by: Katie Roberts-Hoffman <katierh@chromium.org>

--- a/arch/arm/boot/dts/exynos5420-peach-pit.dts
+++ b/arch/arm/boot/dts/exynos5420-peach-pit.dts
@@ -17,7 +17,11 @@
 / {
 	model = "Google Peach Pit Rev 6+";
 
-	compatible = "google,pit-rev10", "google,pit-rev9", "google,pit-rev8",
+	compatible = "google,pit-rev16",
+		"google,pit-rev15", "google,pit-rev14",
+		"google,pit-rev13", "google,pit-rev12",
+		"google,pit-rev11", "google,pit-rev10",
+		"google,pit-rev9", "google,pit-rev8",
 		"google,pit-rev7", "google,pit-rev6",
 		"google,pit", "google,peach", "samsung,exynos5420";
 };
