ARM: dts: Set FET overcurrent timeouts for snow
These are ported over from kernel 3.4.  This is the equivalent of
<http://crosreview.com/29812>, though I changed the property names to
match what's been done with other properties upstream.

BUG=chromium:338657
TEST=Run 'pmu' on EC and see that overcurrent timeouts got set.
Without this CL you see this after boot:
       00 01 02 03 04 05 06 07 08 09 0a 0b 0c 0d 0e 0f 10 11 12 13 14 15 16 17 18
  PMU: 0e 00 3e 00 03 20 4b bf ff ff 20 12 1e 1e 1e 1f 13 13 02 13 1f 13 20 00 00
With this CL you see:
       00 01 02 03 04 05 06 07 08 09 0a 0b 0c 0d 0e 0f 10 11 12 13 14 15 16 17 18
  PMU: 0e 00 3e 00 03 20 4b bf ff ff 20 12 1e 1e 1e 1f 1f 1f 02 1f 1f 1f 20 00 00

Change-Id: I86b387dcb1b8539cfab9da32657263a97ed14965
Signed-off-by: Doug Anderson <dianders@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/184608
Reviewed-by: Olof Johansson <olofj@chromium.org>
Reviewed-by: Sean Paul <seanpaul@chromium.org>
Reviewed-by: Todd Broch <tbroch@chromium.org>

--- a/arch/arm/boot/dts/exynos5250-snow.dtsi
+++ b/arch/arm/boot/dts/exynos5250-snow.dtsi
@@ -206,28 +206,35 @@
 					};
 					fet1 {
 						regulator-name = "vcd_led";
+						ti,overcurrent-wait = <3>;
 					};
 					tps65090_fet2: fet2 {
 						regulator-name = "video_mid";
 						regulator-always-on;
+						ti,overcurrent-wait = <3>;
 					};
 					fet3 {
 						regulator-name = "wwan_r";
 						regulator-always-on;
+						ti,overcurrent-wait = <3>;
 					};
 					fet4 {
 						regulator-name = "sdcard";
+						ti,overcurrent-wait = <3>;
 					};
 					fet5 {
 						regulator-name = "camout";
 						regulator-always-on;
+						ti,overcurrent-wait = <3>;
 					};
 					fet6 {
 						regulator-name = "lcd_vdd";
+						ti,overcurrent-wait = <3>;
 					};
 					tps65090_fet7: fet7 {
 						regulator-name = "video_mid_1a";
 						regulator-always-on;
+						ti,overcurrent-wait = <3>;
 					};
 					ldo1 {
 					};
