ARM: dts: Disable FIMD dithering for peach-pi variants
Peach-pi boards have eDP panels which support RGB6(+FRC data driver),
and hence we need not enable FIMD dithering.

This patch removes FIMD DT properties related to dithering
from exynos542x.dtsi and distributes it across peach-pit dtsi,
but not for peach-pi since we don't need dithering on peach-pi.

BUG=chrome-os-partner:25532
TEST=Boot on all peach boards. Ensure no color bands
     are observed while viewing a gradient image.
     armio 14400170 = 0, on peach-pi(Dithering disabled)
     armio 14400170 = 0x2B, on peach-pit(RGB666 Dithering enabled)

Change-Id: I01ce4f559ee390c1b67920617459660dac983048
Signed-off-by: Ajay Kumar <ajaykumar.rs@samsung.com>
Reviewed-on: https://chromium-review.googlesource.com/185164
Reviewed-by: Jaehoon Kim <jh228.kim@samsung.com>
Reviewed-by: Sean Paul <seanpaul@chromium.org>
Reviewed-by: Doug Anderson <dianders@chromium.org>
Reviewed-by: Dominik Behr <dbehr@chromium.org>
Tested-by: Jaehoon Kim <jh228.kim@samsung.com>
Commit-Queue: Jaehoon Kim <jh228.kim@samsung.com>

--- a/arch/arm/boot/dts/exynos5420-peach-pit.dtsi
+++ b/arch/arm/boot/dts/exynos5420-peach-pit.dtsi
@@ -61,6 +61,8 @@
 
 	fimd {
 		samsung,fimd-src-clk-rate = <70500000>;
+		samsung,use-fimd-dithering;
+		samsung-rgb-dithpos = <6 6 6>;
 	};
 
 	lcd_dp0: lcd_panel0 {
