--- a/chromeos/config/armel/common.config
+++ b/chromeos/config/armel/common.config
@@ -142,6 +142,7 @@ CONFIG_DEBUG_LL=y
 # CONFIG_DEBUG_LL_UART_NONE is not set
 # CONFIG_DEBUG_PINCTRL is not set
 # CONFIG_DEBUG_SEMIHOSTING is not set
+CONFIG_DEBUG_SET_MODULE_RONX=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
 # CONFIG_DEPRECATED_PARAM_STRUCT is not set
 # CONFIG_DM9000 is not set
