--- a/chromeos/config/base.config
+++ b/chromeos/config/base.config
@@ -750,6 +750,8 @@ CONFIG_IP6_NF_MATCH_IPV6HEADER=m
 # CONFIG_IP6_NF_RAW is not set
 # CONFIG_IP6_NF_SECURITY is not set
 # CONFIG_IP6_NF_TARGET_HL is not set
+CONFIG_IP6_NF_TARGET_MASQUERADE=m
+# CONFIG_IP6_NF_TARGET_NPT is not set
 CONFIG_IP6_NF_TARGET_REJECT=m
 # CONFIG_IPACK_BUS is not set
 CONFIG_IPC_NS=y
@@ -787,6 +789,9 @@ CONFIG_IP_NF_MANGLE=y
 # CONFIG_IP_NF_SECURITY is not set
 # CONFIG_IP_NF_TARGET_CLUSTERIP is not set
 # CONFIG_IP_NF_TARGET_ECN is not set
+CONFIG_IP_NF_TARGET_MASQUERADE=m
+# CONFIG_IP_NF_TARGET_NETMAP is not set
+# CONFIG_IP_NF_TARGET_REDIRECT is not set
 CONFIG_IP_NF_TARGET_REJECT=y
 # CONFIG_IP_NF_TARGET_TTL is not set
 CONFIG_IP_NF_TARGET_ULOG=y
@@ -1109,9 +1114,11 @@ CONFIG_NETFILTER_XT_MATCH_STATE=y
 # CONFIG_NETFILTER_XT_TARGET_LED is not set
 # CONFIG_NETFILTER_XT_TARGET_LOG is not set
 # CONFIG_NETFILTER_XT_TARGET_MARK is not set
+# CONFIG_NETFILTER_XT_TARGET_NETMAP is not set
 CONFIG_NETFILTER_XT_TARGET_NFLOG=y
 CONFIG_NETFILTER_XT_TARGET_NFQUEUE=y
 # CONFIG_NETFILTER_XT_TARGET_RATEEST is not set
+# CONFIG_NETFILTER_XT_TARGET_REDIRECT is not set
 CONFIG_NETFILTER_XT_TARGET_SECMARK=y
 CONFIG_NETFILTER_XT_TARGET_TCPMSS=m
 # CONFIG_NETFILTER_XT_TARGET_TCPOPTSTRIP is not set
@@ -1205,8 +1212,17 @@ CONFIG_NF_CT_NETLINK=y
 # CONFIG_NF_CT_PROTO_UDPLITE is not set
 CONFIG_NF_DEFRAG_IPV4=y
 CONFIG_NF_DEFRAG_IPV6=m
-# CONFIG_NF_NAT_IPV4 is not set
-# CONFIG_NF_NAT_IPV6 is not set
+CONFIG_NF_NAT=m
+# CONFIG_NF_NAT_AMANDA is not set
+# CONFIG_NF_NAT_FTP is not set
+# CONFIG_NF_NAT_H323 is not set
+CONFIG_NF_NAT_IPV4=m
+CONFIG_NF_NAT_IPV6=m
+# CONFIG_NF_NAT_IRC is not set
+CONFIG_NF_NAT_NEEDED=y
+# CONFIG_NF_NAT_PPTP is not set
+# CONFIG_NF_NAT_SIP is not set
+# CONFIG_NF_NAT_TFTP is not set
 # CONFIG_NILFS2_FS is not set
 CONFIG_NL80211_TESTMODE=y
 CONFIG_NLATTR=y
