CHROMIUM: config: Normalize all configs
BUG=none
TEST=built chromeos-kernel-next

Change-Id: I9f61aa4d290b17b4b8fac05c1c774db7e499dd63
Signed-off-by: Gaurav Shah <gauravsh@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/185432
Reviewed-by: Mike Frysinger <vapier@chromium.org>
Reviewed-by: Olof Johansson <olofj@chromium.org>

--- a/chromeos/config/base.config
+++ b/chromeos/config/base.config
@@ -608,6 +608,7 @@ CONFIG_HID_MULTITOUCH=m
 CONFIG_HID_PRIMAX=m
 # CONFIG_HID_PRODIKEYS is not set
 # CONFIG_HID_PS3REMOTE is not set
+# CONFIG_HID_QUICKSTEP is not set
 # CONFIG_HID_ROCCAT is not set
 # CONFIG_HID_SAITEK is not set
 # CONFIG_HID_SAMSUNG is not set
@@ -977,6 +978,7 @@ CONFIG_MEDIA_USB_SUPPORT=y
 # CONFIG_MFD_ARIZONA_I2C is not set
 # CONFIG_MFD_ARIZONA_SPI is not set
 # CONFIG_MFD_AS3711 is not set
+CONFIG_MFD_CORE=y
 # CONFIG_MFD_DA9052_I2C is not set
 # CONFIG_MFD_DA9052_SPI is not set
 # CONFIG_MFD_DA9055 is not set
