--- a/chromeos/config/armel/chromeos-exynos5.flavour.config
+++ b/chromeos/config/armel/chromeos-exynos5.flavour.config
@@ -25,6 +25,7 @@ CONFIG_ARM_DMA_USE_IOMMU=y
 # CONFIG_ARM_ERRATA_764369 is not set
 CONFIG_ARM_ERRATA_766421=y
 CONFIG_ARM_ERRATA_773022=y
+CONFIG_ARM_ERRATA_773769=y
 CONFIG_ARM_ERRATA_774769=y
 CONFIG_ARM_EXYNOS5250_CPUFREQ=y
 CONFIG_ARM_EXYNOS5420_ASV=y
@@ -189,6 +190,7 @@ CONFIG_MFD_CROS_EC_I2C=y
 CONFIG_MFD_CROS_EC_SPI=y
 CONFIG_MFD_MAX77XXX=y
 CONFIG_MFD_SEC_CORE=y
+CONFIG_MFD_SYSCON=y
 CONFIG_MFD_TPS65090=y
 # CONFIG_MFD_TPS6586X is not set
 CONFIG_MFD_WM8994=y
@@ -224,6 +226,8 @@ CONFIG_PM_OPP=y
 CONFIG_PWM=y
 CONFIG_PWM_SAMSUNG=y
 CONFIG_REGMAP_IRQ=y
+CONFIG_REGMAP_MMIO=y
+# CONFIG_REGULATOR_ANATOP is not set
 CONFIG_REGULATOR_CROS_EC_TPS65090=y
 CONFIG_REGULATOR_MAX77XXX=y
 CONFIG_REGULATOR_S2MPS11=y
