--- a/chromeos/config/armel/chromiumos-arm.flavour.config
+++ b/chromeos/config/armel/chromiumos-arm.flavour.config
@@ -22,6 +22,7 @@ CONFIG_ARM_ERRATA_754327=y
 CONFIG_ARM_ERRATA_764369=y
 # CONFIG_ARM_ERRATA_766421 is not set
 # CONFIG_ARM_ERRATA_773022 is not set
+# CONFIG_ARM_ERRATA_773769 is not set
 # CONFIG_ARM_ERRATA_774769 is not set
 # CONFIG_ARM_EXYNOS5250_CPUFREQ is not set
 # CONFIG_ARM_EXYNOS5420_CPUFREQ is not set
@@ -94,6 +95,7 @@ CONFIG_MEDIA_SUPPORT=m
 # CONFIG_MFD_MAX77XXX is not set
 # CONFIG_MFD_NVEC is not set
 # CONFIG_MFD_SEC_CORE is not set
+# CONFIG_MFD_SYSCON is not set
 # CONFIG_MFD_TPS65090 is not set
 CONFIG_MFD_TPS6586X=y
 # CONFIG_MFD_WM8994 is not set
