--- a/chromeos/config/armel/chromiumos-tegra124.flavour.config
+++ b/chromeos/config/armel/chromiumos-tegra124.flavour.config
@@ -21,6 +21,7 @@ CONFIG_ARM_ERRATA_754327=y
 CONFIG_ARM_ERRATA_764369=y
 # CONFIG_ARM_ERRATA_766421 is not set
 # CONFIG_ARM_ERRATA_773022 is not set
+# CONFIG_ARM_ERRATA_773769 is not set
 # CONFIG_ARM_ERRATA_774769 is not set
 # CONFIG_ARM_EXYNOS5250_CPUFREQ is not set
 # CONFIG_ARM_EXYNOS5420_CPUFREQ is not set
@@ -110,6 +111,7 @@ CONFIG_MFD_CROS_EC_SPI=y
 # CONFIG_MFD_MAX77XXX is not set
 CONFIG_MFD_NVEC=y
 # CONFIG_MFD_SEC_CORE is not set
+# CONFIG_MFD_SYSCON is not set
 CONFIG_MFD_TPS65090=y
 CONFIG_MFD_TPS6586X=y
 # CONFIG_MFD_WM8994 is not set
