--- a/arch/arm/boot/dts/exynos542x-peach.dtsi
+++ b/arch/arm/boot/dts/exynos542x-peach.dtsi
@@ -471,6 +471,7 @@
 						fet5 {
 							regulator-name = "camout";
 							regulator-always-on;
+							regulator-suspend-mem-disabled;
 						};
 						fet6 {
 							regulator-name = "lcd_vdd";
