Revert "TEMP: ARM: dts: Disable MFC power domain on 5422"
This reverts commit 0f45e8514234db1dc130bd67db1316454bf7ecf4.

CQ-DEPEND=CL:I01ea4b5681c05a791edec75d8edffbde0a9e1a19
BUG=chrome-os-partner:26088
TEST=Play 1080p video on pi and pit for mfc.
Run veau test app for gsc on pit and pi.

Change-Id: I48e29864a9381918704e7103b772081420c92c8a
Signed-off-by: Arun Mankuzhi <arun.m@samsung.com>
Signed-off-by: Prathyush K <prathyush.k@samsung.com>
Reviewed-on: https://chromium-review.googlesource.com/187550
Tested-by: Arun Mankuzhi <arun@chromium.org>
Reviewed-by: Doug Anderson <dianders@chromium.org>
Commit-Queue: Doug Anderson <dianders@chromium.org>

--- a/arch/arm/boot/dts/exynos542x.dtsi
+++ b/arch/arm/boot/dts/exynos542x.dtsi
@@ -468,6 +468,13 @@
 		reg = <0x10044020 0x20>;
 	};
 
+	mfc_pd: pd@10044060 {
+		compatible = "samsung,exynos4210-pd";
+		reg = <0x10044060 0x20>;
+		clocks = <&clock 1>, <&clock 1030>, <&clock 1031>;
+		clock-names = "oscclk", "pclk0", "clk0";
+	};
+
 	g2d_pd: pd@10044100 {
 		compatible = "samsung,exynos4210-pd";
 		reg = <0x10044100 0x20>;
@@ -855,6 +862,7 @@
 		interrupts = <0 96 0>;
 		clocks = <&clock 401>;
 		clock-names = "mfc";
+		samsung,power-domain = <&mfc_pd>;
 	};
 
 	sysmmu-mfc-l {
@@ -866,6 +874,7 @@
 		mmu-master = <&mfc>;
 		clocks = <&clock 402>, <&clock 401>;
 		clock-names = "sysmmu", "master";
+		samsung,power-domain = <&mfc_pd>;
 	};
 
 	sysmmu-mfc-r {
@@ -877,6 +886,7 @@
 		mmu-master = <&mfc>;
 		clocks = <&clock 403>, <&clock 401>;
 		clock-names = "sysmmu", "master";
+		samsung,power-domain = <&mfc_pd>;
 	};
 
 	sysmmu-fimd1m0 {
