dt: exynos542x: pass dout clocks to mfc/gsc pd
Pass the dout clock ids to the mfc/gsc power domains.

BUG=chrome-os-partner:26088
TEST=Play 1080p video on pi and pit for mfc.
Run veau test app for gsc on pit and pi.

Change-Id: I9bb1622810761f41231c4666b5f2d9ba54325421
Signed-off-by: Prathyush K <prathyush.k@samsung.com>
Signed-off-by: Arun Mankuzhi <arun.m@samsung.com>
Reviewed-on: https://chromium-review.googlesource.com/187588
Tested-by: Arun Mankuzhi <arun@chromium.org>
Reviewed-by: Doug Anderson <dianders@chromium.org>
Commit-Queue: Doug Anderson <dianders@chromium.org>

--- a/arch/arm/boot/dts/exynos542x.dtsi
+++ b/arch/arm/boot/dts/exynos542x.dtsi
@@ -459,8 +459,11 @@
 	gsc_pd: pd@10044000 {
 		compatible = "samsung,exynos4210-pd";
 		reg = <0x10044000 0x20>;
-		clocks = <&clock 1>, <&clock 1032>, <&clock 1033>,  <&clock 1034>, <&clock 1035>;
-		clock-names = "oscclk", "pclk0", "clk0", "pclk1", "clk1";
+		clocks = <&clock 1>, <&clock 1032>, <&clock 1033>,
+			 <&clock 2050>, <&clock 1034>, <&clock 1035>,
+			 <&clock 2051>;
+		clock-names = "oscclk", "pclk0", "clk0", "dclk0",
+			      "pclk1", "clk1", "dclk1";
 	};
 
 	isp_pd: pd@10044020 {
@@ -471,8 +474,9 @@
 	mfc_pd: pd@10044060 {
 		compatible = "samsung,exynos4210-pd";
 		reg = <0x10044060 0x20>;
-		clocks = <&clock 1>, <&clock 1030>, <&clock 1031>;
-		clock-names = "oscclk", "pclk0", "clk0";
+		clocks = <&clock 1>, <&clock 1030>, <&clock 1031>,
+			 <&clock 2049>;
+		clock-names = "oscclk", "pclk0", "clk0" , "dclk0";
 	};
 
 	g2d_pd: pd@10044100 {
